--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,8 +1,30 @@
+h1, h2, h3 {
+  font-family: 'Lato', sans-serif;
+  font-weight: 700; }
+
 .centerText {
   text-align: center; }
 
+.forceWrap {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-word;
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto; }
+
+img {
+  width: 100%;
+  height: auto; }
+
 .container {
   margin-top: 40px; }
+
+.topPaddingSm {
+  padding-top: 20px; }
 
 .fpCover {
   height: 100%;
@@ -34,6 +56,32 @@
 .navbar-brand {
   font-family: 'Lato', sans-serif;
   font-weight: 300; }
+
+.footer {
+  width: 100%;
+  background: #5b5b5b; }
+  .footer p, .footer li {
+    color: #cecece; }
+  .footer p {
+    line-height: 50px; }
+  .footer ul {
+    list-style-type: none;
+    padding: 0; }
+  .footer li {
+    margin-top: 25px;
+    text-decoration: none; }
+    .footer li a, .footer li a:active, .footer li a:hover, .footer li a:visited {
+      color: #cecece;
+      text-decoration: none; }
+    .footer li a:active, .footer li a:hover {
+      color: gray;
+      text-decoration: none;
+      font-weight: 700; }
+  .footer h3 {
+    color: white;
+    font-size: 20px; }
+  .footer img {
+    max-width: 275px; }
 
 #navbarLogo {
   height: 30px;
