--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -3,12 +3,18 @@
 // Variables
 $a-tags: 'a, a:active, a:hover, a:visited';
 $a-tags-hover: 'a:active, a:hover';
+$lato: 'Lato', sans-serif;
 // ==========END Variables END===========
 
 // =========General Text Attributes========
 h1, h2, h3 {
-	font-family: 'Lato', sans-serif;
+	font-family: $lato;
 	font-weight: 700;
+}
+
+p {
+	font-family: $lato;
+	font-weight: 400;
 }
 
 .centerText {
@@ -17,17 +23,17 @@ h1, h2, h3 {
 
 .forceWrap {
 
-  overflow-wrap: break-word;
-  word-wrap: break-word;
+	overflow-wrap: break-word;
+	word-wrap: break-word;
 
-  -ms-word-break: break-all;
-  word-break: break-word;
+	-ms-word-break: break-all;
+	word-break: break-word;
 
-  /* Adds a hyphen where the word breaks, if supported (No Blink) */
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
-  hyphens: auto;
+	/* Adds a hyphen where the word breaks, if supported (No Blink) */
+	-ms-hyphens: auto;
+	-moz-hyphens: auto;
+	-webkit-hyphens: auto;
+	hyphens: auto;
 
 }
 // =========END General Text Attributes END=======
@@ -44,7 +50,24 @@ img {
 .topPaddingSm {
 	padding-top: 20px;
 }
+
+.topMarginSm {
+	margin-top: 20px;
+}
 // =========END Sizing Attributes END==========
+
+// =========Buttons===========
+.btn-black {
+	border: 1px solid black;
+	color: black;
+}
+
+.btn-black:hover {
+	@extend .btn-black;
+	background: black;
+	color: white;
+}
+// =========END Buttons END===========
 
 // =========Unique Classes===========
 .fpCover {
@@ -68,18 +91,22 @@ img {
 	text-align: center;
 	h1 {
 		font-size: 80px;
-		font-family: 'Lato', sans-serif;
+		font-family: $lato;
 		font-weight: 700;
 	}
 	h2 {
 		font-size: 50px;
-		font-family: 'Lato', sans-serif;
+		font-family: $lato;
 		font-weight: 300;
 	}
 }
 
+.navbar {
+	padding: 1rem 1rem;
+}
+
 .navbar-brand {
-	font-family: 'Lato', sans-serif;
+	font-family: $lato;
 	font-weight: 300;
 }
 
@@ -89,9 +116,11 @@ img {
 	
 	p, li {
 		color: #cecece;
+		font-weight: 300;
+		font-size: 20px;
 	}
 	p {
-		line-height: 50px;
+		line-height: 57px;
 	}
 	ul {
 		list-style-type: none;
@@ -102,7 +131,9 @@ img {
 		text-decoration: none;
 
 		#{$a-tags} {
+		font-family: $lato;
 		color: #cecece;
+		font-weight: 300;
 		text-decoration: none;
 
 		}
@@ -120,6 +151,27 @@ img {
 		max-width: 275px;
 	}
 }
+
+.footerNote {
+	text-align: center;
+	p {
+		color: gray;
+		font-size: 15px;
+		margin: 0;
+	}
+}
+
+.buildBanner {
+	text-align: center;
+	background: black;
+	h3 {
+		font-size: 20px;
+		color: white;
+		margin: 0;
+		padding-top: 5px;
+		padding-bottom: 5px;
+	}
+}
 // =========END Unique Classes END===========
 
 // =========IDs=========
@@ -128,3 +180,32 @@ img {
 	width: auto;
 }
 // =========END IDs END=========
+
+// =========Medias=========
+@media (max-width: 576px) {
+	.fpCoverText {
+	width: 250px;
+	height: 110px;
+		h1 {
+			font-size: 60px;
+			font-family: $lato;
+			font-weight: 700;
+		}
+		h2 {
+			font-size: 40px;
+			font-family: $lato;
+			font-weight: 300;
+		}
+	}
+}
+
+
+
+@media (max-width: 1100px) {
+	.footer {
+		p {
+			line-height: 35px;
+		}
+	}
+}
+// =========END Medias END=========
