--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1872,11 +1872,11 @@ fieldset[disabled] a.btn {
   pointer-events: none; }
 
 .btn-primary {
-  color: #fff;
+  color: #000;
   background-color: #0275d8;
   border-color: #0275d8; }
   .btn-primary:hover {
-    color: #fff;
+    color: #000;
     background-color: #025aa5;
     border-color: #01549b; }
   .btn-primary:focus, .btn-primary.focus {
@@ -1886,30 +1886,30 @@ fieldset[disabled] a.btn {
     border-color: #0275d8; }
   .btn-primary:active, .btn-primary.active,
   .show > .btn-primary.dropdown-toggle {
-    color: #fff;
+    color: #000;
     background-color: #025aa5;
     background-image: none;
     border-color: #01549b; }
 
 .btn-secondary {
-  color: #292b2c;
+  color: #fff;
   background-color: #fff;
-  border-color: #ccc; }
+  border-color: #fff; }
   .btn-secondary:hover {
-    color: #292b2c;
+    color: #fff;
     background-color: #e6e6e6;
-    border-color: #adadad; }
+    border-color: #e0e0e0; }
   .btn-secondary:focus, .btn-secondary.focus {
-    box-shadow: 0 0 0 2px rgba(204, 204, 204, 0.5); }
+    box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.5); }
   .btn-secondary.disabled, .btn-secondary:disabled {
     background-color: #fff;
-    border-color: #ccc; }
+    border-color: #fff; }
   .btn-secondary:active, .btn-secondary.active,
   .show > .btn-secondary.dropdown-toggle {
-    color: #292b2c;
+    color: #fff;
     background-color: #e6e6e6;
     background-image: none;
-    border-color: #adadad; }
+    border-color: #e0e0e0; }
 
 .btn-info {
   color: #fff;
@@ -2012,24 +2012,24 @@ fieldset[disabled] a.btn {
     border-color: #0275d8; }
 
 .btn-outline-secondary {
-  color: #ccc;
+  color: #fff;
   background-image: none;
   background-color: transparent;
-  border-color: #ccc; }
+  border-color: #fff; }
   .btn-outline-secondary:hover {
     color: #fff;
-    background-color: #ccc;
-    border-color: #ccc; }
+    background-color: #fff;
+    border-color: #fff; }
   .btn-outline-secondary:focus, .btn-outline-secondary.focus {
-    box-shadow: 0 0 0 2px rgba(204, 204, 204, 0.5); }
+    box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.5); }
   .btn-outline-secondary.disabled, .btn-outline-secondary:disabled {
-    color: #ccc;
+    color: #fff;
     background-color: transparent; }
   .btn-outline-secondary:active, .btn-outline-secondary.active,
   .show > .btn-outline-secondary.dropdown-toggle {
     color: #fff;
-    background-color: #ccc;
-    border-color: #ccc; }
+    background-color: #fff;
+    border-color: #fff; }
 
 .btn-outline-info {
   color: #5bc0de;
@@ -3115,8 +3115,8 @@ tbody.collapse.show {
   margin-left: -0.625rem; }
 
 .card-primary {
-  background-color: #0275d8;
-  border-color: #0275d8; }
+  background-color: #000;
+  border-color: #000; }
   .card-primary .card-header,
   .card-primary .card-footer {
     background-color: transparent; }
@@ -3155,7 +3155,7 @@ tbody.collapse.show {
 
 .card-outline-secondary {
   background-color: transparent;
-  border-color: #ccc; }
+  border-color: #fff; }
 
 .card-outline-info {
   background-color: transparent;
@@ -4230,10 +4230,10 @@ button.close {
   background-color: #f7f7f7; }
 
 .bg-primary {
-  background-color: #0275d8 !important; }
+  background-color: #000 !important; }
 
 a.bg-primary:focus, a.bg-primary:hover {
-  background-color: #025aa5 !important; }
+  background-color: black !important; }
 
 .bg-success {
   background-color: #5cb85c !important; }
@@ -6264,10 +6264,10 @@ a.text-muted:focus, a.text-muted:hover {
   color: #4b5257 !important; }
 
 .text-primary {
-  color: #0275d8 !important; }
+  color: #000 !important; }
 
 a.text-primary:focus, a.text-primary:hover {
-  color: #025aa5 !important; }
+  color: black !important; }
 
 .text-success {
   color: #5cb85c !important; }
