--- a/public/css/main-min.css
+++ b/public/css/main-min.css
@@ -16,7 +16,6 @@ p, a {
   word-break: break-word;
   /* Adds a hyphen where the word breaks, if supported (No Blink) */
   -ms-hyphens: auto;
-  -moz-hyphens: auto;
   -webkit-hyphens: auto;
   hyphens: auto; }
 
@@ -59,14 +58,16 @@ img {
   left: 0;
   bottom: 0;
   text-align: center; }
-  .fpCoverText h1 {
-    font-size: 80px;
-    font-family: "Lato", sans-serif;
-    font-weight: 700; }
-  .fpCoverText h2 {
-    font-size: 50px;
-    font-family: "Lato", sans-serif;
-    font-weight: 300; }
+
+.fpCoverText h1 {
+  font-size: 80px;
+  font-family: "Lato", sans-serif;
+  font-weight: 700; }
+
+.fpCoverText h2 {
+  font-size: 50px;
+  font-family: "Lato", sans-serif;
+  font-weight: 300; }
 
 .navbar {
   padding: 1rem 1rem; }
@@ -78,62 +79,69 @@ img {
 .footer {
   width: 100%;
   background: #5b5b5b; }
-  .footer p, .footer li {
-    color: #cecece;
-    font-weight: 300;
-    font-size: 20px; }
-  .footer p {
-    line-height: 57px; }
-  .footer ul {
-    list-style-type: none;
-    padding: 0; }
-  .footer li {
-    margin-top: 25px;
-    text-decoration: none; }
-    .footer li a, .footer li a:active, .footer li a:hover, .footer li a:visited {
-      font-family: "Lato", sans-serif;
-      color: #cecece;
-      font-weight: 300;
-      text-decoration: none; }
-    .footer li a:active, .footer li a:hover {
-      color: gray;
-      text-decoration: none;
-      font-weight: 700; }
-  .footer h3 {
-    color: white;
-    font-size: 20px; }
-  .footer img {
-    max-width: 275px; }
+
+.footer p, .footer li {
+  color: #cecece;
+  font-weight: 300;
+  font-size: 20px; }
+
+.footer p {
+  line-height: 57px; }
+
+.footer ul {
+  list-style-type: none;
+  padding: 0; }
+
+.footer li {
+  margin-top: 25px;
+  text-decoration: none; }
+
+.footer li a, .footer li a:active, .footer li a:hover, .footer li a:visited {
+  font-family: "Lato", sans-serif;
+  color: #cecece;
+  font-weight: 300;
+  text-decoration: none; }
+
+.footer li a:active, .footer li a:hover {
+  color: gray;
+  text-decoration: none;
+  font-weight: 700; }
+
+.footer h3 {
+  color: white;
+  font-size: 20px; }
+
+.footer img {
+  max-width: 275px; }
 
 .footerNote {
   text-align: center; }
-  .footerNote p {
-    color: gray;
-    font-size: 15px;
-    margin: 0; }
+
+.footerNote p {
+  color: gray;
+  font-size: 15px;
+  margin: 0; }
 
 .buildBanner {
   text-align: center;
   background: black; }
-  .buildBanner h3 {
-    font-size: 20px;
-    color: white;
-    margin: 0;
-    padding-top: 5px;
-    padding-bottom: 5px; }
+
+.buildBanner h3 {
+  font-size: 20px;
+  color: white;
+  margin: 0;
+  padding-top: 5px;
+  padding-bottom: 5px; }
 
 .buildTile a, .buildTile a:active, .buildTile a:hover, .buildTile a:visited {
-  color: gray;
+  color: #cecece;
   font-weight: 400;
   text-decoration: none; }
 
 .buildTile a:active, .buildTile a:hover {
-  color: #cecece;
+  color: gray;
   text-decoration: none;
   font-weight: 700; }
-
-.sideNav {
-  background: #e5e5e5; }
 
 #navbarLogo {
   height: 30px;
@@ -143,19 +151,17 @@ img {
   .fpCoverText {
     width: 250px;
     height: 110px; }
-    .fpCoverText h1 {
-      font-size: 60px;
-      font-family: "Lato", sans-serif;
-      font-weight: 700; }
-    .fpCoverText h2 {
-      font-size: 40px;
-      font-family: "Lato", sans-serif;
-      font-weight: 300; } }
+  .fpCoverText h1 {
+    font-size: 60px;
+    font-family: "Lato", sans-serif;
+    font-weight: 700; }
+  .fpCoverText h2 {
+    font-size: 40px;
+    font-family: "Lato", sans-serif;
+    font-weight: 300; } }
 
 @media (max-width: 1100px) {
   .footer p {
     line-height: 35px; } }
 
-@media (min-width: 768px) {
-  .bootstrap-vertical-nav .collapse {
-    display: block; } }
+/*# sourceMappingURL=main-min.css.map */
