add checkboxes to sidebar

--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -189,6 +189,14 @@ img {
 
 .sideNav {
 	background: #e5e5e5;
+	padding-top: 20px;
+}
+
+#collapseExample {
+	h3 {
+		font-size: 20px;
+		margin-top: 10px;
+	}
 }
 // =========END Unique Classes END===========
 
