--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -54,6 +54,10 @@ img {
 .topMarginSm {
 	margin-top: 20px;
 }
+
+.botMarginSm {
+	margin-bottom: 20px;
+}
 // =========END Sizing Attributes END==========
 
 // =========Buttons===========
@@ -192,10 +196,21 @@ img {
 	padding-top: 20px;
 }
 
-#collapseExample {
-	h3 {
-		font-size: 20px;
-		margin-top: 10px;
+.imageBox {
+	position: relative;
+}
+
+.votesBox {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	padding-left: 10px;
+	padding-right: 10px;
+	background: gray;
+	opacity: .7;
+	p {
+		opacity: 1;
+		margin: 0;
 	}
 }
 // =========END Unique Classes END===========
@@ -204,6 +219,17 @@ img {
 #navbarLogo {
 	height: 30px;
 	width: auto;
+}
+
+#filterDropdown {
+	float: right;
+}
+
+#collapseExample {
+	h3 {
+		font-size: 20px;
+		margin-top: 10px;
+	}
 }
 // =========END IDs END=========
 
