--- a/public/css/main.css
+++ b/public/css/main.css
@@ -36,6 +36,9 @@ img {
 .botMarginSm {
   margin-bottom: 20px; }
 
+button, .btn {
+  border-radius: 0; }
+
 .btn-black, .btn-black:hover {
   border: 1px solid black;
   color: black; }
@@ -43,6 +46,16 @@ img {
 .btn-black:hover {
   background: black;
   color: white; }
+
+.btn-black:active {
+  background: gray; }
+
+.btn-black:focus {
+  box-shadow: 0 0 0 2px rgba(208, 208, 208, 0.5); }
+
+.show > .btn-outline-primary.dropdown-toggle {
+  background: gray;
+  border-color: gray; }
 
 .fpCover {
   height: 100%;
