Add create builds page, implement parralax, modify controller and update index/master blades

--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -232,6 +232,23 @@ button, .btn {
 }
 // =========END Unique Classes END===========
 
+
+// ==========Parallax==============
+.parallax { 
+  /* The image used */
+  background-image: url("../images/buildPC.jpg");
+
+  /* Set a specific height */
+  height: 500px; 
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+// ==========Parallax==============
+
 // =========IDs=========
 #navbarLogo {
 	height: 30px;
@@ -279,8 +296,15 @@ button, .btn {
 }
 
 @media (min-width: 768px) {
-    .bootstrap-vertical-nav .collapse {
-        display: block;
-    }
+  .bootstrap-vertical-nav .collapse {
+      display: block;
+  }
 }
+
+@media (max-width: 768px) {
+  .sideNav {
+		padding: 0px;
+	}
+}
+
 // =========END Medias END=========
