--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -230,6 +230,17 @@ button, .btn {
 		margin: 0;
 	}
 }
+
+.border {
+	border: 1px solid black;
+}
+
+.table {
+	margin-top: 40px;
+	.btn {
+		color: white;
+	}
+}
 // =========END Unique Classes END===========
 
 
@@ -279,6 +290,12 @@ button, .btn {
 	h3 {
 		font-size: 20px;
 		margin-top: 10px;
+	}
+}
+
+#tourBox {
+	p {
+		margin: 10px;
 	}
 }
 // =========END IDs END=========
