--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,6 +9,9 @@ p, a {
 .centerText {
   text-align: center; }
 
+.rightText {
+  text-align: right; }
+
 .forceWrap {
   overflow-wrap: break-word;
   word-wrap: break-word;
