--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -62,6 +62,10 @@ img {
 .botMarginSm {
 	margin-bottom: 20px;
 }
+
+.floatRight {
+	float: right;
+}
 // =========END Sizing Attributes END==========
 
 // =========Buttons===========
@@ -239,12 +243,34 @@ button, .btn {
 	border: 1px solid black;
 }
 
+.blueBorder {
+	 box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+  padding: 3px 0px 3px 3px;
+  margin: 5px 1px 3px 0px;
+  border: 1px solid rgba(81, 203, 238, 1);
+  background: #213351;
+}
+
 .table {
 	margin-top: 40px;
 	.btn {
 		color: white;
 	}
 }
+
+.signupForm {
+	label {
+		color: white;
+	}
+
+	.inverseInput {
+		opacity: .5;
+		color: white;
+		background: gray;
+	}
+}
+
+
 // =========END Unique Classes END===========
 
 
@@ -278,6 +304,14 @@ button, .btn {
 		bottom: 0;
 	}
 }
+
+.blackBackground {
+	background: black;
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
+}
 // ==========Parallax==============
 
 // =========IDs=========
@@ -302,6 +336,30 @@ button, .btn {
 		margin: 10px;
 	}
 }
+
+#createAccountVideo {
+	position: relative;
+ 	height: 500px;
+ 	width:100%;
+ 	overflow: hidden;
+
+  video {
+	  min-width: 100%;
+	  min-height: 100%;
+	}
+}
+
+#accountCover {
+	@extend .fpCoverText;
+	h1 {
+		font-size: 150px;
+		opacity: .3;
+	}
+	width: 585px;
+	height: 125px;
+}
+
+
 // =========END IDs END=========
 
 // =========Medias=========
