Update general code for staging push

--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -270,6 +270,13 @@ button, .btn {
 	}
 }
 
+.userInfo {
+	text-align: center;
+	img {
+		width: 200px;
+	}
+}
+
 
 // =========END Unique Classes END===========
 
