Add webm formats, update us user blade with tabs and responsive design

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -194,10 +194,8 @@ button, .btn {
   color: white;
   background: gray; }
 
-.userInfo {
-  text-align: center; }
-  .userInfo img {
-    width: 200px; }
+.userPhoto img {
+  width: 200px; }
 
 .parallax {
   position: relative;
