--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -284,6 +284,12 @@ button, .btn {
 	}
 }
 
+.errorPage {
+	height: 100%;
+	h4 {
+		color: #cecece;
+	}
+}
 
 // =========END Unique Classes END===========
 
