Add login/register errors

--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -44,6 +44,10 @@ p, a {
 .bold {
 	font-weight: 700;
 }
+
+.whiteText {
+	color: red;
+}
 // =========END General Text Attributes END=======
 
 // =========Sizing Attributes==========
