Add show part page, light style. Implement cases, CPU cooler, CPU and GPU logic for show page

--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -78,6 +78,11 @@ img {
 .boxGridPadding {
 	padding: 20px;
 }
+
+.showImgMax {
+	max-height: 300px;
+	width: auto;
+}
 // =========END Sizing Attributes END==========
 
 // =========Buttons===========
