--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -48,6 +48,21 @@ p, a {
 .whiteText {
 	color: red;
 }
+
+.compGreen {
+	color: green;
+	font-weight: 700;
+}
+
+.compYellow {
+	color: yellow;
+	font-weight: 700;
+}
+
+.compRed {
+	color: red;
+	font-weight: 700;
+}
 // =========END General Text Attributes END=======
 
 // =========Sizing Attributes==========
