--- a/public/css/tour.css
+++ b/public/css/tour.css
@@ -41,6 +41,7 @@ a {
     text-decoration: none;
     color: #1d9b6c; }
 
+
 #mainNav {
   font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   margin-bottom: 0;
@@ -86,7 +87,7 @@ a {
         #mainNav .nav-link.active:hover {
           color: white; } }
         #diagram {
-              margin-left: -147px;
+              margin-left: -9px;
           }
 
 .masthead {
@@ -96,7 +97,7 @@ a {
   padding: 100px 0;
   text-align: center;
   color: white;
-  background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
+  background: url(../images/intro-bg.jpg) no-repeat bottom center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -157,7 +158,7 @@ a {
 
 @media (min-width: 767px) {
   .content-section {
-    padding-top: 250px; }
+    padding-top: 10px; }
   .download-section {
     padding: 100px 0; }
   #map {
