--- a/public/css/tour.css
+++ b/public/css/tour.css
@@ -41,6 +41,9 @@ a {
     text-decoration: none;
     color: #1d9b6c; }
 
+th {
+    text-align: center;
+}
 
 #mainNav {
   font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
