--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -358,6 +358,20 @@ button, .btn {
 }
 // ==========Parallax==============
 
+// ==========Pagination===========
+.pagination {
+	li {
+		border: 1px solid black;
+		padding: 10px;
+		margin: 5px;
+
+		a {
+			padding: 10px;
+		}
+	}
+}
+// ==========Pagination===========
+
 // =========IDs=========
 #navbarLogo {
 	height: 30px;
