--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -349,6 +349,28 @@ button, .btn {
 	}
 }
 
+.ascendParallax {
+	@extend .parallax;
+	background-image: url("../images/pcmasterrace.png");
+}
+
+.ascendCoverText {
+	@extend .createCoverText;
+	h1 {
+		width: 400px;
+		height: 100px;
+		font-size: 100px;
+		font-weight: 700px;
+		color: gray;
+		left: 0;
+		right: 0;
+		bottom: -134px;
+		top: 0;
+	}
+}
+
+
+
 .blackBackground {
 	background: black;
 	margin: 0;
@@ -356,7 +378,7 @@ button, .btn {
 	width: 100%;
 	height: 100%;
 }
-// ==========Parallax==============
+// ==========END Parallax==============
 
 // ==========Pagination===========
 .pagination {
@@ -442,6 +464,17 @@ button, .btn {
 			font-size: 50px;
 			width: 307px;
 			height: 60px;
+		}
+	}
+
+	.ascendCoverText {
+		h1 {
+			width: 200px;
+			color: gray;
+			left: 0;
+			right: 0;
+			bottom: -310px;
+			top: 0;
 		}
 	}
 }
