--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -315,6 +315,12 @@ button, .btn {
 	}
 }
 
+.largeBox {
+	border: 1px solid black;
+	padding-bottom: 40px;
+	padding-left: 10px;
+	padding-right: 10px;
+}
 // =========END Unique Classes END===========
 
 
