--- a/public/css/tour.css
+++ b/public/css/tour.css
@@ -1,1 +1,16 @@
-
+html, body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+.cover {
+    background: url(/images/intro-bg.jpg) center center;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+}
+.killMargin {
+    margin: 0;
+}
