--- a/public/css/tour.css
+++ b/public/css/tour.css
@@ -14,3 +14,16 @@ html, body {
 .killMargin {
     margin: 0;
 }
+.olympus {
+    font-size: 75px;
+    position: absolute;
+	width: 235px;
+	height: 200px;
+	color: white;
+	margin: auto;
+	top: 0;
+	right: 0;
+	left: 0;
+	bottom: 0;
+	text-align: center;
+}
