Add user show page

--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -86,6 +86,10 @@ img {
 	margin-bottom: 20px;
 }
 
+.botMarginLg {
+	margin-bottom: 150px;
+}
+
 .floatRight {
 	float: right;
 }
@@ -97,6 +101,10 @@ img {
 .showImgMax {
 	max-height: 300px;
 	width: auto;
+}
+
+.fullHeight {
+	min-height: 100%;
 }
 // =========END Sizing Attributes END==========
 
