--- a/public/css/main.css
+++ b/public/css/main.css
@@ -57,6 +57,9 @@ img {
 .botMarginSm {
   margin-bottom: 20px; }
 
+.botMarginLg {
+  margin-bottom: 150px; }
+
 .floatRight {
   float: right; }
 
@@ -66,6 +69,9 @@ img {
 .showImgMax {
   max-height: 300px;
   width: auto; }
+
+.fullHeight {
+  min-height: 100%; }
 
 button, .btn {
   border-radius: 0; }
