--- a/public/css/tour.css
+++ b/public/css/tour.css
@@ -27,3 +27,31 @@ html, body {
 	bottom: 0;
 	text-align: center;
 }
+.white {
+    color: white;
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 40px;
+}
+.description {
+    color: white;
+    text-align: center;
+    margin-bottom: 100px;
+}
+.hardware {
+    height: 80%;
+    width: 80%;
+}
+.borderless td, .borderless th {
+    border: none;
+}
+.row {
+    color: white;
+}
+#colored {
+    color: black;
+    background-color: black;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+}
