--- a/public/css/tour.css
+++ b/public/css/tour.css
@@ -45,6 +45,11 @@ html, body {
     text-align: center;
     margin-bottom: 100px;
 }
+.descriptionExtra {
+    color: white;
+    text-align: center;
+    margin-bottom: 75px;
+}
 .hardware {
     height: 80%;
     width: 80%;
@@ -54,6 +59,16 @@ html, body {
 }
 .row {
     color: white;
+}
+.textMargin {
+    margin-bottom: 105px;
+}
+.ascend {
+    margin-top: 5%;
+    font-size: 300%;
+}
+.btn-primary {
+    margin-left: 43%;
 }
 #colored {
     color: black;
