--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -106,6 +106,11 @@ img {
 .fullHeight {
 	min-height: 100%;
 }
+
+.partThumbnail {
+	height: 50px;
+	width: auto;
+}
 // =========END Sizing Attributes END==========
 
 // =========Buttons===========
