--- a/public/css/main.css
+++ b/public/css/main.css
@@ -29,6 +29,15 @@ p, a {
 .whiteText {
   color: red; }
 
+.greenText {
+  color: green; }
+
+.redText {
+  color: red; }
+
+.yellowText {
+  color: yellow; }
+
 .compGreen {
   color: green;
   font-weight: 700; }
@@ -38,7 +47,8 @@ p, a {
   font-weight: 700; }
 
 .compRed {
-  color: red;
+  color: white;
+  background: red;
   font-weight: 700; }
 
 img {
@@ -242,6 +252,12 @@ button, .btn {
   padding-bottom: 40px;
   padding-left: 10px;
   padding-right: 10px; }
+
+.terminal {
+  color: #e2e2e2;
+  background: black;
+  width: 100%;
+  padding: 20px; }
 
 .parallax, .ascendParallax {
   position: relative;
