--- a/public/css/tour.css
+++ b/public/css/tour.css
@@ -68,14 +68,15 @@ html, body {
     font-size: 300%;
 }
 .btn-primary {
-    margin-left: 43%;
     margin-top: 25px
 }
 .mountain {
     width: 25%;
     margin-bottom: 50px;
     margin-top: 25px;
-    margin-left: 623px;
+}
+.center {
+    text-align: center;
 }
 #colored {
     color: black;
